# game_of_life

./: CMakeLists.txt
src/: game_field.h  game_of_life.cpp  game_of_life.h  game_rule.h  main.cpp
